add more atlas info
