# Backend/src/database/dtos/atlas.dto.ts
@@ -20,6 +20,10 @@ export interface AddAtlasDTO {
     inrevision?: boolean;
     isPrivate?: boolean;
     benchmarked?: false;
+    doi?: string,
+    samples: number,
+    individuals: number,
+    datasets: number
 }
 
 export interface UpdateAtlasDTO {
